# cvd-net-pipeline

./: .gitignore  Create_data_batchrunner.ipynb  README.md  combined_pipeline.py  gsa_pipeline.py  investigating_lognormal.ipynb  main.py  parameters_pulmonary.json  parameters_sensitive_pca123_9.json  parameters_sensitive_pca_11.json  parameters_sensitive_timeseries_7.json  pyproject.toml  real_pipeline.py  sensitivity_analysis_pipeline.py  synthetic_pipeline.py
config/: gsa.json  gsa_numbers.json  pipeline_config.json  pipeline_config_real.json  pipeline_config_real_for_tests.json  pipeline_config_real_new.json  pipeline_config_sensitivity.json  pipeline_config_synthetic.json  pipeline_config_synthetic_new_gaussian_sigmas_17_keys.json  pipeline_config_synthetic_old_gaussian_sigmas_16_keys.json  pipeline_gsa_config.json  real.json  real_ci_6.json  synthetic.json  synthetic_for_tests.json  synthetic_levan_playground.json
dummy_data/: input_dummy_data.csv  pure_input_dummy_data.csv
input_parameter_jsons/: parameters_sensitive_ci_6.json
input_parameters_jsons/: parameters_dummy_data.JSON  parameters_patr_drift.json  parameters_patr_drift_2.json  parameters_patr_drift_2_rc.json  parameters_patr_drift_2_rveact.json  parameters_patr_drift_3.json  parameters_pulmonary.json  parameters_pulmonary_sensitive_summarystats.json  parameters_sensitive_ci_6_wide.json  parameters_sensitive_pca123_9.json  parameters_sensitive_pca12_8.json  parameters_sensitive_pca_11.json  parameters_sensitive_playground.json  parameters_sensitive_timeseries_7.json
notebooks/: Build_emulator_giessen_synthetic.ipynb  Create_data_batchrunner.ipynb  Debug_resampling.ipynb  KFEmulator.ipynb  KFEmulator_Levan.ipynb  Plotting_AnalyseGiessen.ipynb  batchrunner_failing_issue.ipynb  bayesian_calibration.py  br_drift_parameters.ipynb  compare_output.ipynb  comparing_emulators.ipynb  correlatin_matrix.ipynb  investigating_datatypes_pipeline.ipynb  investigating_lognormal.ipynb  kf_patr_drift.ipynb  manuscript_plots.ipynb  playground_levan.ipynb  plot_ci.ipynb  plot_ci_new.ipynb  plot_sa.ipynb  plotting_giessen_data.ipynb  posterior_samples.csv  test.ipynb
(+1425 files in other folders)
