[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
python_requires = ">=3.12"

[project]
name = "cvdnet-pipeline"
version = "0.1.0"
description = "A pipeline for CVDNet."
authors = [
    { name = "Fay Frost", email = "your.email@example.com" }
]
dependencies = [
    "pandas",
    "numpy",
    "ModularCirc",
    "pytest",
    "my-package @ git+https://github.com/MaxBalmus/GiessenDataAnalysis.git@main",

]

[project.optional-dependencies]
notebooks = ["ipykernel"]
dev = ["pre-commit", "black", "flake8", "isort"]
