[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
python_requires = ">=3.12"

[project]
name = "cvdnet-pipeline"
version = "0.1.0"
description = "A pipeline for performing rapid calibration of 0D cardiovascular models using linear emulators."
authors = [
    { name = "Fay Frost", email = "fay.frost@nottingham.ac.uk" },
    { name = "Levan Bokeria", email = "levan.bokeria@gmail.com" }
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "pandas",
    "numpy",
    "ModularCirc",
    "pytest",
    "my-package @ git+https://github.com/MaxBalmus/GiessenDataAnalysis.git@main",
    "seaborn",
    "salib"
]

[project.scripts]
cvdnet-pipe = "cvdnet_pipeline.run_pipeline:main"

[project.optional-dependencies]
notebooks = ["ipykernel"]
dev = ["pre-commit", "black", "flake8", "isort"]

[project.urls]
"Homepage" = "https://github.com/alan-turing-institute/cvd-net-pipeline"
"Source Code" = "https://github.com/alan-turing-institute/cvd-net-pipeline"
"Bug Tracker" = "https://github.com/alan-turing-institute/cvd-net-pipeline/issues"